retrieveUnpackaged/objects/Assessment_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Criteria1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Criteria__c</fullName>
        <label>Additional Criteria</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_Budget_Adequacy__c</fullName>
        <defaultValue>&quot;Cost-Effectiveness and Budget Adequacy (XX%): In determining the quality of the application reviewers will consider the following criteria:&quot;</defaultValue>
        <label>Cost Effectiveness &amp; Budget Adequacy</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <label>Notice ID</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipLabel>Assessment Criteria</relationshipLabel>
        <relationshipName>Assessment_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Organizational_Capability__c</fullName>
        <defaultValue>&quot;Organizational Capability (XX%): In determining the quality of the application reviewers will consider the following criteria: o the extent to which the applicant demonstrates&quot;</defaultValue>
        <label>Organizational Capability</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rationale_and_Approach_Program_Design__c</fullName>
        <defaultValue>&quot;Program Design (XX%): In determining the quality of the application reviewers will assess the following criteria:o the extent to which the proposed project addresses o the extent to which the proposed project would implement o the potential contribution o the clarity and importance o the extent to which the proposal logically connects o the likelihood that the intervention&quot;</defaultValue>
        <label>Rationale and Approach/Program Design</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Assessment Criteria</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Assessment Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>